--- a/src/tasks/06/klammerpaare.html
+++ b/src/tasks/06/klammerpaare.html
@@ -3,31 +3,31 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Klammerpaare</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link href="./style.css" rel="stylesheet"/>
 </head>
 
 <body>
-    <h1>Klammerpaare</h1>
-    <div>
-        <label for="pre-list-input">Pre Symbol</label>
-        <input class="symbol-input" id="pre-list-input" type="text" maxlength="1" />
-        <label for="post-list-input">Post Symbol</label>
-        <input class="symbol-input" id="post-list-input" type="text" maxlength="1" />
-        <button onclick="submitSymbols()">Set Symbols</button>
-    </div>
+<h1>Klammerpaare</h1>
+<div>
+    <label for="pre-list-input">Pre Symbol</label>
+    <input class="symbol-input" id="pre-list-input" maxlength="1" type="text"/>
+    <label for="post-list-input">Post Symbol</label>
+    <input class="symbol-input" id="post-list-input" maxlength="1" type="text"/>
+    <button onclick="submitSymbols()">Set Symbols</button>
+</div>
 
-    <div>
-        <ul id="symbol-list">
-            <p>No Symbol selected. Please use form above to set pre and post symbols</p>
-        </ul>
-    </div>
+<div>
+    <ul id="symbol-list">
+        <p>No Symbol selected. Please use form above to set pre and post symbols</p>
+    </ul>
+</div>
 
-    <div>
-        <textarea id="eingabe"></textarea>
-        <button onclick="clearTextArea()">Clear</button>
-    </div>
+<div>
+    <textarea id="eingabe"></textarea>
+    <button onclick="clearTextArea()">Clear</button>
+</div>
 </body>
 <script src="./script.js"></script>
 
