--- a/src/tasks/01/1-7_HTML-Wireframe.html
+++ b/src/tasks/01/1-7_HTML-Wireframe.html
@@ -2,77 +2,80 @@
 <html>
 
 <head>
-  <meta charset='utf-8'>
-  <title>Page Title</title>
+    <meta charset='utf-8'>
+    <title>Page Title</title>
 </head>
 
 <body>
 <h1>Übung 1.2: Inventors of the Web</h1>
 <ul>
-  <li><u><mark>Tim Berners Lee:</mark></u>WWW HTTP, HTML, URI</li>
-  <li><b>Hakom Lie and Bert Bos:</b> CSS</li>
-  <li><b>Brendan Eich:</b> JavaScript</li>
+    <li><u>
+        <mark>Tim Berners Lee:</mark>
+    </u>WWW HTTP, HTML, URI
+    </li>
+    <li><b>Hakom Lie and Bert Bos:</b> CSS</li>
+    <li><b>Brendan Eich:</b> JavaScript</li>
 </ul>
 <hr>
 <h2>Inventors of the WWW</h2>
 <table border="8" width="100%">
-  <tr>
-    <td colspan="4">
-      <center><b>Inventors of WWW</b></center>
-    </td>
-  </tr>
-  <tr>
-    <td><b>
-      <center>WWWW</center>
-    </b></td>
-    <td>
-      <center><b>HTML</b></center>
-    </td>
-    <td>
-      <center><b>CSS</b></center>
-    </td>
-    <td>
-      <center><b>JavaScript</b></center>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <center>
-        <mark>Tim Berners Lee:</mark>
-      </center>
-    </td>
-    <td>
-      <center>
-        <mark>Tim Berners Lee:</mark>
-      </center>
-    </td>
-    <td>
-      <center>Hakom Lie and Bert Bos</center>
-    </td>
-    <td>
-      <center>Brendan Eich</center>
-    </td>
-  </tr>
+    <tr>
+        <td colspan="4">
+            <center><b>Inventors of WWW</b></center>
+        </td>
+    </tr>
+    <tr>
+        <td><b>
+            <center>WWWW</center>
+        </b></td>
+        <td>
+            <center><b>HTML</b></center>
+        </td>
+        <td>
+            <center><b>CSS</b></center>
+        </td>
+        <td>
+            <center><b>JavaScript</b></center>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <center>
+                <mark>Tim Berners Lee:</mark>
+            </center>
+        </td>
+        <td>
+            <center>
+                <mark>Tim Berners Lee:</mark>
+            </center>
+        </td>
+        <td>
+            <center>Hakom Lie and Bert Bos</center>
+        </td>
+        <td>
+            <center>Brendan Eich</center>
+        </td>
+    </tr>
 </table>
 
 <hr>
 <h3>Inventors of WWW</h3>
 <hr>
 <b>
-                    HTML             </b>
+                      HTML             </b>
 <span>|</span>
 <b>
-               JavaScript                  </b>
+                 JavaScript                  </b>
 
 <br>
-<img src="https://kaul.inf.h-brs.de/ccm/we/ws23/resources/assets/tbl.jpg" />
+<img src="https://kaul.inf.h-brs.de/ccm/we/ws23/resources/assets/tbl.jpg"/>
 <span>|</span>
-<img src="https://kaul.inf.h-brs.de/ccm/we/ws23/resources/assets/eich.jpg" />
+<img src="https://kaul.inf.h-brs.de/ccm/we/ws23/resources/assets/eich.jpg"/>
 <div>
         <span><mark>Tim Berners Lee</mark>
                             </span>
-  <span>|</span>
-  <span>Brendan Eich</span>
+    <span>|</span>
+    <span>Brendan Eich</span>
 </div>
 <hr>
 </body>
