--- a/src/tasks/09/01.html
+++ b/src/tasks/09/01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet">
     <style>
         body {
@@ -33,19 +33,19 @@
 <div>
     <h2>SVG Use the Platform</h2>
 </div>
-<svg width="300" height="100" xmlns="http://www.w3.org/2000/svg">
+<svg height="100" width="300" xmlns="http://www.w3.org/2000/svg">
     <!-- Background -->
-    <rect width="100%" height="100%" fill="#CB798D" />
+    <rect fill="#CB798D" height="100%" width="100%"/>
 
     <!-- Text Elements -->
-    <text x="5%" y="30%" font-size="24" fill="white">Use</text>
-    <text x="5%" y="60%" font-size="24" fill="white">The</text>
-    <text x="5%" y="90%" font-size="24" fill="white">Platform</text>
+    <text fill="white" font-size="24" x="5%" y="30%">Use</text>
+    <text fill="white" font-size="24" x="5%" y="60%">The</text>
+    <text fill="white" font-size="24" x="5%" y="90%">Platform</text>
 
     <!-- Underlines -->
-    <line x1="5%" y1="38%" x2="95%" y2="38%" stroke="white" stroke-width="2" />
-    <line x1="5%" y1="68%" x2="95%" y2="68%" stroke="white" stroke-width="2" />
-    <line x1="5%" y1="98%" x2="95%" y2="98%" stroke="white" stroke-width="2" />
+    <line stroke="white" stroke-width="2" x1="5%" x2="95%" y1="38%" y2="38%"/>
+    <line stroke="white" stroke-width="2" x1="5%" x2="95%" y1="68%" y2="68%"/>
+    <line stroke="white" stroke-width="2" x1="5%" x2="95%" y1="98%" y2="98%"/>
 </svg>
 
 </body>
