--- a/src/tasks/09/02.html
+++ b/src/tasks/09/02.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <title>Animated Bar Chart</title>
 </head>
