feat: add text based solution for testing in home view

--- a/index.html
+++ b/index.html
@@ -50,6 +50,30 @@
             </header>
             <button class="open-btn" onclick="toggleNav()">&#9654; Open Sidebar</button>
             <h2>Lösungen</h2>
+            <div id="task1-1" class="single-task">
+                <div class="question">
+                    <h3>1.1 World Wide Web</h3>
+                    <ol>
+                        <li>Mit welchen fachlichen Argumenten wurde das WWW-Proposal von Tim Burners Lee abgelehnt?</li>
+                        <li>Was sind die fachlichen Argumente, warum das WWW dennoch ein Erfolg wurde?</li>
+                        <li>Was wäre der Preis für die garantierte Verhinderung von "broken links"?</li>
+                    </ol>
+                </div>
+                <div class="solution">
+                    <h3>Loesung 1.1</h3>
+                    <ol>
+                        <li>Mangelnde Verständlichkeit. Bestehende Informationssysteme, Mangelnde Geschäftsrelevanz,
+                            Fehlende
+                        </li>
+                        <li>Sicherheit und Kontrolle
+                            Dezentralisierung und Offenheit, Einfache Benutzbarkeit, Hypertext und Verlinkung von
+                            Ressourcen,
+                            Skalierbarkeit.
+                        </li>
+                        <li>Websitesgröße, Häufigkeit von Änderungen, Servicequalitaet</li>
+                    </ol>
+                </div>
+            </div>
             <div id="task1-7" class="single-task">
                 <h3>1.2: HTML Wireframe</h3>
                 <a class="live-demo-link" href="src/tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
