feat: add solution for task 2.4

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                 <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
                 <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
             </div>
+            <div id="task2-4" class="single-task">
+                <h3>2.4: Wireframe mit HTML und CSS</h3>
+                <a class="live-demo-link" href="src/tasks/02/04.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
+
+                    <iframe class="live-prev-frame" src="src/tasks/02/04.html"></iframe>
+                </div>
+            </div>
             <div id="task3-1" class="single-task">
                 <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
                 <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
