feat: add solution for task 3.3

--- a/index.html
+++ b/index.html
@@ -90,32 +90,33 @@
                     <script src="https://gist.github.com/m0xai/e98bfd72b8833e17731025cdceb73cd9.js"></script>
                     <iframe class="live-prev-frame" src="src/tasks/02/2-erste-video.html"></iframe>
                 </div>
-            </div>
-            <div class="single-task">
-                <h3>2.3: CSS-Positionierung</h3>
-                <h3>Loesung zu 2. Video</h3>
+                <h4>Loesung zu 2. Video</h4>
                 <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
-                <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
-                <h3>Loesung zu 2. Video</h3>
-                <a class="live-demo-link" href="src/tasks/02/2-zweite-video.html">Live Demo</a>
-                <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
-            </div>
-            <div id="task2-4" class="single-task">
-                <h3>2.4: Wireframe mit HTML und CSS</h3>
-                <a class="live-demo-link" href="src/tasks/02/04.html">Live Demo</a>
                 <div class="single-task-content">
                     <script src="https://gist.github.com/m0xai/b647fe6ae2c542341c680a125a13034c.js"></script>
-
-                    <iframe class="live-prev-frame" src="src/tasks/02/04.html"></iframe>
+                    <iframe class="live-prev-frame" src="src/tasks/02/2-zweite-video.html"></iframe>
                 </div>
             </div>
             <div id="task3-1" class="single-task">
                 <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
                 <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
+                <div class="single-task-content">
                 <script src="https://gist.github.com/m0xai/49378a980c8228501475d50fe3103f5f.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/03/1-resp-mit-flexbox.html"></iframe>
+                </div>
                 <h3>3.2 Responsiv mit Grid und Mobile-First</h3>
                 <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/03/2-resp-mit-grid.html"></iframe>
+                </div>
+                <h3>3.3 Wireframe responsive mit Grid</h3>
+                <a class="live-demo-link" href="src/tasks/03/03.html">Live Demo</a>
+                <div class="single-task-content">
                 <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/03/03.html"></iframe>
+                </div>
+            </div>
             </div>
             <div id="task6-1" class="single-task">
                 <h3>6.1 Klammerpaare</h3>
