--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
                     </ol>
                 </div>
             </div>
+            <h2>Solution Navigator</h2>
             <div id="task1-7" class="single-task">
-                <h3>1.2: HTML Wireframe</h3>
+                <h3>1.7: HTML Wireframe</h3>
                 <a class="live-demo-link" href="src/tasks/01/1-7_HTML-Wireframe.html">Live Demo</a>
                 <div class="single-task-content">
                     <script src="https://gist.github.com/m0xai/8cd9be3910f2d0c1c4dfc2d9b9780731.js"></script>
@@ -97,54 +98,93 @@
                     <iframe class="live-prev-frame" src="src/tasks/02/2-zweite-video.html"></iframe>
                 </div>
             </div>
-            <div id="task3-1" class="single-task">
-                <h3>3.1 Responsiv mit Flexbox und Desktop-First</h3>
+            <div class="single-task">
+                <h3 id="task3-1">3.1 Responsiv mit Flexbox und Desktop-First</h3>
                 <a class="live-demo-link" href="src/tasks/03/1-resp-mit-flexbox.html">Live Demo</a>
                 <div class="single-task-content">
                 <script src="https://gist.github.com/m0xai/49378a980c8228501475d50fe3103f5f.js"></script>
                     <iframe class="live-prev-frame" src="src/tasks/03/1-resp-mit-flexbox.html"></iframe>
                 </div>
-                <h3>3.2 Responsiv mit Grid und Mobile-First</h3>
+                <h3 id="task3-2">3.2 Responsiv mit Grid und Mobile-First</h3>
                 <a class="live-demo-link" href="src/tasks/03/2-resp-mit-grid.html">Live Demo</a>
                 <div class="single-task-content">
                     <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
                     <iframe class="live-prev-frame" src="src/tasks/03/2-resp-mit-grid.html"></iframe>
                 </div>
-                <h3>3.3 Wireframe responsive mit Grid</h3>
+                <h3 id="task3-3">3.3 Wireframe responsive mit Grid</h3>
                 <a class="live-demo-link" href="src/tasks/03/03.html">Live Demo</a>
                 <div class="single-task-content">
                 <script src="https://gist.github.com/m0xai/4a466520a64db8a8685ad8d215a2b1c7.js"></script>
                     <iframe class="live-prev-frame" src="src/tasks/03/03.html"></iframe>
                 </div>
             </div>
+            <div class="single-task">
+                <h3 id="task5-2">5.2 Rednerliste mit Zeitmessung</h3>
+
+                <a class="live-demo-link" href="src/tasks/05/1-rednerliste-mit-zeitmessung.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/935b51b1f35d909e49f7807fbf3458a1.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/05/1-rednerliste-mit-zeitmessung.html"></iframe>
             </div>
-            <div id="task6-1" class="single-task">
-                <h3>6.1 Klammerpaare</h3>
+            </div>
+            <div class="single-task">
+                <h3 id="task6-1">6.1 Klammerpaare</h3>
                 <a class="live-demo-link" href="src/tasks/06/klammerpaare.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/c40458929aadb3070afb60d7be983051.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/06/klammerpaare.html"></iframe>
+                </div>
             </div>
-            <div id="task8-1" class="single-task">
-                <h3>8.1 Promises</h3>
+            <div class="single-task">
+                <h3 id="task8-1">8.1 Promises</h3>
                 <a class="live-demo-link" href="src/tasks/08/01.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/246e326c075caaddef7806b8f1575e23.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/08/01.html"></iframe>
+                </div>
             </div>
-            <div id="task8-2" class="single-task">
-                <h3>8.2 async/await</h3>
+            <div class="single-task">
+                <h3 id="task8-2">8.2 async/await</h3>
                 <a class="live-demo-link" href="src/tasks/08/02.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/b5dbdd494d624aca339c5629b68b4e62.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/08/02.html"></iframe>
+                </div>
             </div>
-            <div id="task8-3" class="single-task">
-                <h3>8.3 WWW-Navigator</h3>
+            <div class="single-task">
+                <h3 id="task8-3">8.3 WWW-Navigator</h3>
                 <a class="live-demo-link" href="src/tasks/08/03.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/e829e18382f5457fe4f5b5d79263155d.js"></script>
+                    <iframe class="live-prev-frame" src="src/tasks/08/03.html"></iframe>
+                </div>
             </div>
-            <div id="task9-1" class="single-task">
-                <h3>9.1 SVG Show</h3>
-                <iframe width="500" height="500" src="./src/tasks/09/01.html" title="Solution of 09.1"></iframe>
+            <div class="single-task">
+                <h3 id="task9-1">9.1 SVG Show</h3>
+                <a class="live-demo-link" href="src/tasks/09/01.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/dfd153ddc824cc980b79dd3ed1bda991.js"></script>
+                    <iframe class="live-prev-frame" width="500" height="500" src="./src/tasks/09/01.html"
+                        title="Solution of 09.1"></iframe>
+                </div>
             </div>
-            <div id="task9-2" class="single-task">
-                <h3>9.2 Balkendiagramm Animiert</h3>
-                <iframe width="500" height="400" src="./src/tasks/09/02.html" title="Solution of 09.2"></iframe>
+            <div class="single-task">
+                <h3 id="task9-2">9.2 Balkendiagramm Animiert</h3>
+                <a class="live-demo-link" href="src/tasks/09/02.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/071f4d73e41a5f3a8e93a4efc67abba4.js"></script>
+                    <iframe class="live-prev-frame" width="500" height="400" src="./src/tasks/09/02.html"
+                        title="Solution of 09.2"></iframe>
+                </div>
             </div>
-            <div id="task9-3" class="single-task">
-                <h3>9.3 Tic Tac Toe</h3>
-                <iframe width="500" height="400" src="./src/tasks/09/03.html" title="Solution of 09.2"></iframe>
+            <div class="single-task">
+                <h3 id="task9-3">9.3 Tic Tac Toe</h3>
+                <a class="live-demo-link" href="src/tasks/09/03.html">Live Demo</a>
+                <div class="single-task-content">
+                    <script src="https://gist.github.com/m0xai/9e4899e41ad44abf6f7b640c6fb24af1.js"></script>
+                    <iframe class="live-prev-frame" width="500" height="400" src="./src/tasks/09/03.html"
+                        title="Solution of 09.2"></iframe>
+                </div>
             </div>
         </section>
     </div>
