feat: update sidebar menu contents

--- a/index.html
+++ b/index.html
@@ -33,19 +33,41 @@
 
 <body>
 <aside id="mySidebar">
-    <div class="close-btn" onclick="toggleNav()">&#9665;</div>
+        <div class="close-btn" onclick="toggleNav()">&#x2715;</div>
     <a href="#">Home</a>
-    <button class="accordion">Section 1</button>
+        <button class="accordion">Task 1</button>
+        <div class="panel">
+            <a href="#task1-7">Solution 1.7</a>
+        </div>
+        <button class="accordion">Task 2</button>
+        <div class="panel">
+            <a href="#task2-3">Solution 2.3</a>
+        </div>
+        <button class="accordion">Task 3</button>
+        <div class="panel">
+            <a href="#task3-1">Solution 3.1</a>
+            <a href="#task3-2">Solution 3.2</a>
+            <a href="#task3-3">Solution 3.3</a>
+        </div>
+        <button class="accordion">Task 5</button>
+        <div class="panel">
+            <a href="#task5-2">Solution 5.2</a>
+        </div>
+        <button class="accordion">Task 6</button>
+        <div class="panel">
+            <a href="#task6-1">Solution 6.1</a>
+        </div>
+        <button class="accordion">Task 8</button>
     <div class="panel">
-        <a href="#">Submenu 1</a>
-        <a href="#">Submenu 2</a>
-        <a href="#">Submenu 3</a>
+            <a href="#task8-1">Solution 8.1</a>
+            <a href="#task8-2">Solution 8.2</a>
+            <a href="#task8-3">Solution 8.3</a>
     </div>
-    <button class="accordion">Section 2</button>
+        <button class="accordion">Task 9</button>
     <div class="panel">
-        <a href="#">Submenu 1</a>
-        <a href="#">Submenu 2</a>
-        <a href="#">Submenu 3</a>
+            <a href="#task9-1">Solution 9.1</a>
+            <a href="#task9-2">Solution 9.2</a>
+            <a href="#task9-3">Solution 9.3</a>
     </div>
 </aside>
 <main class="wrapper">
